# human_tracking_bot

./: .gitignore  LICENSE.txt  README.md  venv_setting.md
src/ht_bringup/: CMakeLists.txt  package.xml
src/ht_bringup/launch/: robot_bringup.launch.py
src/ht_control/: package.xml  setup.cfg  setup.py
src/ht_control/ht_control/: tracking_controller.py
src/ht_hardware/: package.xml  setup.cfg  setup.py
src/ht_hardware/ht_hardware/: motor_driver.py  simple_teleop.py
src/ht_vision/: package.xml  setup.cfg  setup.py
src/ht_vision/ht_vision/: yolo_detector.py  yolo_detector_pose.py  yolo_detector_seg.py
